--- a/faq/index.html
+++ b/faq/index.html
@@ -1,155 +1,4 @@
-<!-- FAQs
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQs | Aline Analytics</title>
-    <link rel="stylesheet" href="../style.css">
-</head>
-<body>
-
-    <div id="header"></div>
-
-    <main class="container">
-
-        <h1>Frequently Asked Questions</h1>
-
-        <h2>General Compensation Consulting</h2>
-
-        <h3>What types of companies do you work with?</h3>
-        <p>
-            I primarily work with small to mid-sized organizations that want compensation decisions grounded in market data, internal equity, and business strategy. This often includes companies preparing for growth, experiencing retention challenges, or formalizing pay practices for the first time.
-        </p>
-
-        <h3>What problems do your services typically solve?</h3>
-        <p>
-            Common challenges include outdated or inconsistent pay ranges, compression caused by hiring pressure, difficulty explaining pay decisions, ineffective incentive plans, and the absence of clear pay progression paths. My work focuses on making compensation defensible, competitive, and sustainable.
-        </p>
-
-        <h3>How is your approach different from using salary surveys alone?</h3>
-        <p>
-            Salary surveys provide raw data. I focus on interpretation, alignment, and application. Each role is evaluated for job match quality, data reliability, internal equity, and organizational context before recommendations are made.
-        </p>
-
-        <h3>Do you replace HR or internal compensation teams?</h3>
-        <p>
-            No. I work as an extension of your team, providing specialized expertise, structure, and objective analysis for high-impact compensation decisions.
-        </p>
-
-        <h2>Market Alignment Audit</h2>
-
-        <h3>What is a market alignment audit?</h3>
-        <p>
-            A market alignment audit evaluates how current employee pay compares to relevant external benchmarks and internal peers. It identifies misalignment, risk areas, and priority actions rather than recommending across-the-board increases.
-        </p>
-
-        <h3>What data sources do you use?</h3>
-        <p>
-            Multiple independent compensation datasets are reviewed and consolidated. Each source is evaluated for relevance, sample integrity, and methodological transparency to reduce reliance on any single dataset.
-        </p>
-
-        <h3>How do you ensure roles are matched correctly to market data?</h3>
-        <p>
-            Roles are matched based on job content, scope, and responsibility — not just job title. This reduces the risk of inaccurate benchmarking and flawed pay decisions.
-        </p>
-
-        <h3>What does the final deliverable include?</h3>
-        <p>
-            Deliverables typically include market positioning by role, identification of under- and over-market pay, risk flags such as compression or equity concerns, and adjustment scenarios with estimated cost impact.
-        </p>
-
-        <h2>Performance Pay & Incentive Design</h2>
-
-        <h3>What is performance pay design?</h3>
-        <p>
-            Performance pay design aligns compensation with measurable outcomes, such as individual, team, or company performance. This may include bonuses, commissions, or incentive plans.
-        </p>
-
-        <h3>How do you decide which performance metrics to use?</h3>
-        <p>
-            Metrics are selected based on business objectives, employee influence over outcomes, data reliability, and the behaviors the plan encourages. The goal is to reward performance without creating unintended incentives.
-        </p>
-
-        <h3>Can you fix an incentive plan that isn’t working?</h3>
-        <p>
-            Yes. Existing plans are reviewed to identify misalignment, overpayment or underpayment risk, lack of differentiation, and administrative complexity. Adjustments are made with minimal disruption whenever possible.
-        </p>
-
-        <h3>Do performance plans have to be complicated?</h3>
-        <p>
-            No. In practice, simplicity often improves effectiveness. Clear and transparent plans are easier to communicate and more likely to influence behavior.
-        </p>
-
-        <h2>Pay Progression & Career Pathing</h2>
-
-        <h3>What is a pay progression strategy?</h3>
-        <p>
-            A pay progression strategy defines how compensation grows over time based on performance, skill development, role expansion, or tenure — independent of promotions.
-        </p>
-
-        <h3>Why is pay progression important?</h3>
-        <p>
-            Without a defined progression model, organizations often rely on ad-hoc increases, which can lead to pay compression, inequity, and retention risk.
-        </p>
-
-        <h3>Does this require formal job ladders?</h3>
-        <p>
-            Not always. Progression can be implemented through ranges, bands, or skill-based frameworks depending on organizational structure and maturity.
-        </p>
-
-        <h3>How do you prevent pay compression?</h3>
-        <p>
-            Progression models are designed to account for range positioning, promotion timing, market movement, and hiring premiums so compression is addressed proactively rather than reactively.
-        </p>
-
-        <h2>Full Spectrum Compensation</h2>
-
-        <h3>What does full spectrum compensation include?</h3>
-        <p>
-            Full spectrum services include market benchmarking, pay structures and ranges, incentive design, progression frameworks, and compensation governance guidelines.
-        </p>
-
-        <h3>How long does a full compensation engagement take?</h3>
-        <p>
-            Timelines vary by scope and data readiness. Targeted audits may take a few weeks, while full frameworks may span several months.
-        </p>
-
-        <h3>Will this increase our payroll costs?</h3>
-        <p>
-            Not necessarily. Many organizations uncover misallocations rather than broad underpayment. The objective is smarter compensation spend, not automatic increases.
-        </p>
-
-        <h3>Do you help with employee communication?</h3>
-        <p>
-            Yes. I provide manager-ready explanations, documentation, and guidance to support clear and consistent pay communication.
-        </p>
-
-        <h2>Risk, Compliance & Practicalities</h2>
-
-        <h3>Is this work legally compliant?</h3>
-        <p>
-            While I do not provide legal advice, methodologies align with best practices for documentation, consistency, and defensibility. 
-        </p>
-
-        <h3>What information is needed to get started?</h3>
-        <p>
-            Typical inputs include job descriptions, current compensation data, organizational structure, and business objectives. I guide the data collection process to minimize internal burden.
-        </p>
-
-        <h3>How do we know this will work for our organization?</h3>
-        <p>
-            Recommendations are grounded in your data, structure, and constraints — not generic models. Practical implementation is a core design principle.
-        </p>
-
-    </main>
-
-    <div id="footer"></div>
-    <script src="/includes.js"></script>
-
-</body>
-</html> -->
+<!-- FAQ Page -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -165,14 +14,270 @@
   <div id="header"></div>
   <main class="container">
 
-    <section class="section">
-        <div class="container">
-            <h2>FAQs</h2>
-            <p><strong>Do you replace HR?</strong><br>No — we support leadership and HR with data and structure.</p>
-            <p><strong>Company size?</strong><br>Typically 50–200 employees.</p>
+    <section class="faq-hero">
+        <div class="faq-hero-text">
+            <h1>Frequently Asked Questions</h1>
+            <h3>Find answers to common questions about our services</h3>
+        </div>
+        <div class="faq-hero-img"></div>
+    </section>
+
+    <h3 class="faq-category">General Compensation Consulting</h3>
+    <div class="faq-item">
+        <div class="faq-header">
+            What types of companies do you work with?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>I primarily work with small to mid-sized organizations that want compensation decisions grounded in market data, internal equity, and business strategy. This often includes companies preparing for growth, experiencing retention challenges, or formalizing pay practices for the first time.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            What problems do your services typically solve?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Common challenges include outdated or inconsistent pay ranges, compression caused by hiring pressure, difficulty explaining pay decisions, ineffective incentive plans, and the absence of clear pay progression paths. My work focuses on making compensation defensible, competitive, and sustainable.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            How is your approach different from using salary surveys alone?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Salary surveys provide raw data. I focus on interpretation, alignment, and application. Each role is evaluated for job match quality, data reliability, internal equity, and organizational context before recommendations are made.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            Do you replace HR or internal compensation teams?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>No. I work as an extension of your team, providing specialized expertise, structure, and objective analysis for high-impact compensation decisions.</p>
+        </div>
+    </div>
+
+    <h3 class="faq-category">Market Alignment Audit</h3>
+    <div class="faq-item">
+        <div class="faq-header">
+            What is a market alignment audit?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>A market alignment audit evaluates how current employee pay compares to relevant external benchmarks and internal peers. It identifies misalignment, risk areas, and priority actions rather than recommending across-the-board increases.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            What data sources do you use?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Multiple independent compensation datasets are reviewed and consolidated. Each source is evaluated for relevance, sample integrity, and methodological transparency to reduce reliance on any single dataset.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            How do you ensure roles are matched correctly to market data?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Roles are matched based on job content, scope, and responsibility — not just job title. This reduces the risk of inaccurate benchmarking and flawed pay decisions.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            What does the final deliverable include?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Deliverables typically include market positioning by role, identification of under- and over-market pay, risk flags such as compression or equity concerns, and adjustment scenarios with estimated cost impact.</p>
+        </div>
+    </div>
+
+    <h3 class="faq-category">Performance Pay & Incentive Design</h3>
+    <div class="faq-item">
+        <div class="faq-header">
+            What is performance pay design?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Performance pay design aligns compensation with measurable outcomes, such as individual, team, or company performance. This may include bonuses, commissions, or incentive plans.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            How do you decide which performance metrics to use?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Metrics are selected based on business objectives, employee influence over outcomes, data reliability, and the behaviors the plan encourages. The goal is to reward performance without creating unintended incentives.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            Can you fix an incentive plan that isn’t working?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Yes. Existing plans are reviewed to identify misalignment, overpayment or underpayment risk, lack of differentiation, and administrative complexity. Adjustments are made with minimal disruption whenever possible.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            Do performance plans have to be complicated?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>No. In practice, simplicity often improves effectiveness. Clear and transparent plans are easier to communicate and more likely to influence behavior.</p>
+        </div>
+    </div>
+
+    <h3 class="faq-category">Pay Progression & Career Pathing</h3>
+    <div class="faq-item">
+        <div class="faq-header">
+            What is a pay progression strategy?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>A pay progression strategy defines how compensation grows over time based on performance, skill development, role expansion, or tenure — independent of promotions.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            Why is pay progression important?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Without a defined progression model, organizations often rely on ad-hoc increases, which can lead to pay compression, inequity, and retention risk.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            Does this require formal job ladders?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Not always. Progression can be implemented through ranges, bands, or skill-based frameworks depending on organizational structure and maturity.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            How do you prevent pay compression?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Progression models are designed to account for range positioning, promotion timing, market movement, and hiring premiums so compression is addressed proactively rather than reactively.</p>
+        </div>
+    </div>
+
+    <h3 class="faq-category">Full Spectrum Compensation</h3>
+    <div class="faq-item">
+        <div class="faq-header">
+            What does full spectrum compensation include?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Full spectrum services include market benchmarking, pay structures and ranges, incentive design, progression frameworks, and compensation governance guidelines.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            How long does a full compensation engagement take?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Timelines vary by scope and data readiness. Targeted audits may take a few weeks, while full frameworks may span several months.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            Will this increase our payroll costs?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Not necessarily. Many organizations uncover misallocations rather than broad underpayment. The objective is smarter compensation spend, not automatic increases.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            Do you help with employee communication?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Yes. I provide manager-ready explanations, documentation, and guidance to support clear and consistent pay communication.</p>
+        </div>
+    </div>
+
+    <h3 class="faq-category">Risk, Compliance & Practicalities</h3>
+    <div class="faq-item">
+        <div class="faq-header">
+            Is this work legally compliant?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>While I do not provide legal advice, methodologies align with best practices for documentation, consistency, and defensibility. </p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            What information is needed to get started?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Typical inputs include job descriptions, current compensation data, organizational structure, and business objectives. I guide the data collection process to minimize internal burden.</p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-header">
+            How do we know this will work for our organization?
+            <span class="icon">+</span>
+        </div>
+        <div class="faq-content">
+            <p>Recommendations are grounded in your data, structure, and constraints — not generic models. Practical implementation is a core design principle.</p>
+        </div>
+    </div>
+
+    <script>
+        const headers = document.querySelectorAll('.faq-header');
+
+        headers.forEach(header => {
+            header.addEventListener('click', () => {
+            const content = header.nextElementSibling;
+            header.classList.toggle('active');
+            content.classList.toggle('open');
+            });
+        });
+    </script>
+
+    <section class="faq-mid-text">
+        <div class="faq-mid-text-txt">
+            <h2>Still have questions?</h2>
+            <p>Contact us and we'll be happy to assist you!</p>
         </div>
     </section>
-    
+
+    <a href="mailto:allieroth@alineanalytics.com" class="get-in-touch-btn">Get in Touch</a> 
 
   </main>
 
