hero to all pages

--- a/faq/index.html
+++ b/faq/index.html
@@ -14,12 +14,12 @@
   <div id="header"></div>
   <main class="container">
 
-    <section class="faq-hero">
-        <div class="faq-hero-text">
+    <section class="page-hero">
+        <div class="page-hero-text">
             <h1>Frequently Asked Questions</h1>
             <h3>Find answers to common questions about our services</h3>
         </div>
-        <div class="faq-hero-img"></div>
+        <div class="page-hero-img"></div>
     </section>
 
     <h3 class="faq-category">General Compensation Consulting</h3>
