--- a/services/pps/index.html
+++ b/services/pps/index.html
@@ -83,6 +83,14 @@
   <div id="header"></div>
   <main class="container">
 
+    <section class="page-hero">
+        <div class="page-hero-text">
+            <h1>Pay Progression Strategy</h1>
+            <h3>...</h3>
+        </div>
+        <div class="page-hero-img"></div>
+    </section>
+
     <section class="section">
         <div class="container card-grid">
             <h2>Pay Progression Strategy</h2>
