--- a/about/index.html
+++ b/about/index.html
@@ -55,6 +55,14 @@
   <div id="header"></div>
   <main class="container">
 
+    <section class="page-hero">
+        <div class="page-hero-text">
+            <h1>About Us</h1>
+            <h3>...</h3>
+        </div>
+        <div class="page-hero-img"></div>
+    </section>
+
     <section class="section">
         <div class="container">
             <h2>About Aline Analytics</h2>
