--- a/contact/index.html
+++ b/contact/index.html
@@ -12,6 +12,14 @@
   <div id="header"></div>
   <main class="container">
 
+    <section class="page-hero">
+        <div class="page-hero-text">
+            <h1>Contact Us</h1>
+            <h3>...</h3>
+        </div>
+        <div class="page-hero-img"></div>
+    </section>
+
     <section class="section">
         <div class="container">
             <h2>Contact Us</h2>
