--- a/services/fsc/index.html
+++ b/services/fsc/index.html
@@ -82,6 +82,14 @@
   <div id="header"></div>
   <main class="container">
 
+    <section class="page-hero">
+        <div class="page-hero-text">
+            <h1>Financial Scenario Consulting</h1>
+            <h3>...</h3>
+        </div>
+        <div class="page-hero-img"></div>
+    </section>
+
     <section class="section">
         <div class="container card-grid">
             <h2>Financial Scenario Consulting</h2>
