--- a/services/index.html
+++ b/services/index.html
@@ -93,6 +93,14 @@
   <div id="header"></div>
   <main class="container">
 
+    <section class="page-hero">
+        <div class="page-hero-text">
+            <h1>Our Services</h1>
+            <h3>...</h3>
+        </div>
+        <div class="page-hero-img"></div>
+    </section>
+
     <section class="section">
         <div class="container card-grid">
             <a class="card" href="/services/maa/">Market Adjustment Analysis</a>
