about page done

--- a/about/index.html
+++ b/about/index.html
@@ -58,15 +58,38 @@
     <section class="page-hero">
         <div class="page-hero-text">
             <h1>About Us</h1>
-            <h3>...</h3>
+            <h3>Discover the approach, knowledge, and dedication behind success</h3>
         </div>
         <div class="page-hero-img"></div>
     </section>
 
     <section class="section">
-        <div class="container">
-            <h2>About Aline Analytics</h2>
-            <p>Aline Analytics exists to help companies make smarter, clearer compensation decisions without overcomplication.</p>
+        <div class="about-container">
+            <h2>Allie Roth</h2>
+            <h4>Founder & Principal Analyst at Aline Analytics</h4>
+            <p>
+                I'm the founder and principal analyst at Aline
+                Analytics, turning complex data into clear,
+                actionable insights. With 7+ years of experience in compensation
+                analysis, advanced proficiency in Excel, SQL, and Python,
+                I help organizations make informed, strategic decisions.
+                My work is grounded in both precision and practicality,
+                ensuring every analysis drives meaningful impact.
+                <br>
+                <br>
+                I believe the best results come from collaboration - working
+                closely with teams and clients to understand their goals
+                and deliver insights that create real value. Whether it's
+                designing reports, modeling data, or tackling analytical
+                challenges, I bring curiosity, rigor, and a modern approach
+                to every project.
+            </p>
+            <p>
+                For consulting inquires or to schedule a conversation about
+                your organization's compensation needs, email me at
+                <a href="mailto:allieroth@alineanalytics.com">allieroth@alineanalytics.com</a>. I personally review every
+                message.
+            </p>
         </div>
     </section>
     
