page subtitles and learn more button fix

--- a/services/index.html
+++ b/services/index.html
@@ -96,7 +96,7 @@
     <section class="page-hero">
         <div class="page-hero-text">
             <h1>Our Services</h1>
-            <h3>...</h3>
+            <h3>Solutions, strategies, and expertise that drive growth</h3>
         </div>
         <div class="page-hero-img"></div>
     </section>
