--- a/services/maa/index.html
+++ b/services/maa/index.html
@@ -70,7 +70,7 @@
     <section class="page-hero">
         <div class="page-hero-text">
             <h1>Market Adjustment Analysis</h1>
-            <h3>...</h3>
+            <h3>Ensure base pay aligns with current market realities</h3>
         </div>
         <div class="page-hero-img"></div>
     </section>
@@ -78,7 +78,7 @@
     <section class="section">
         <div class="container card-grid">
             <h2>Market Adjustment Analysis</h2>
-            <p>Ensure base pay aligns with current market realities.</p>
+            <p>...</p>
         </div>
     </section>
     
