--- a/services/ppd/index.html
+++ b/services/ppd/index.html
@@ -85,7 +85,7 @@
     <section class="page-hero">
         <div class="page-hero-text">
             <h1>Pay Program Design</h1>
-            <h3>...</h3>
+            <h3>Build bonus frameworks that scale</h3>
         </div>
         <div class="page-hero-img"></div>
     </section>
@@ -93,7 +93,7 @@
     <section class="section">
         <div class="container card-grid">
             <h2>Pay Program Design</h2>
-            <p>Build bonus frameworks that scale.</p>
+            <p>...</p>
         </div>
     </section>
     
