--- a/contact/index.html
+++ b/contact/index.html
@@ -15,7 +15,7 @@
     <section class="page-hero">
         <div class="page-hero-text">
             <h1>Contact Us</h1>
-            <h3>...</h3>
+            <h3>Start the conversation to move your business forward</h3>
         </div>
         <div class="page-hero-img"></div>
     </section>
