--- a/services/fsc/index.html
+++ b/services/fsc/index.html
@@ -85,7 +85,7 @@
     <section class="page-hero">
         <div class="page-hero-text">
             <h1>Financial Scenario Consulting</h1>
-            <h3>...</h3>
+            <h3>Model compensation costs before decisions are made</h3>
         </div>
         <div class="page-hero-img"></div>
     </section>
@@ -93,7 +93,7 @@
     <section class="section">
         <div class="container card-grid">
             <h2>Financial Scenario Consulting</h2>
-            <p>Model compensation costs before decisions are made.</p>
+            <p>...</p>
         </div>
     </section>
     
