--- a/services/pps/index.html
+++ b/services/pps/index.html
@@ -86,7 +86,7 @@
     <section class="page-hero">
         <div class="page-hero-text">
             <h1>Pay Progression Strategy</h1>
-            <h3>...</h3>
+            <h3>Build raise frameworks that scale</h3>
         </div>
         <div class="page-hero-img"></div>
     </section>
@@ -94,7 +94,7 @@
     <section class="section">
         <div class="container card-grid">
             <h2>Pay Progression Strategy</h2>
-            <p>Build raise frameworks that scale.</p>
+            <p>...</p>
         </div>
     </section>
     
