--- a/services/index.html
+++ b/services/index.html
@@ -1,84 +1,5 @@
 <!-- Overview of All Services -->
 
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="../style.css">
-</head>
-<body>
-    <div id="header"></div>
-    <main class="container">
-        <h1>Our Services</h1>
-        <div class="services-grid">
-            <div class="service-card">
-                <h2>Market Alignment Audit</h2>
-                <p>
-                    Analyze your current compensation practices against
-                    trusted market data to pinpoint gaps, equity issues,
-                    and opportunities to stay competitive.
-                    <br>
-                    <br>
-                    Deliverable: Clear findings and recommendations.
-                    <br>
-                    Cost: $150 per hour
-                </p>
-                <a class="service-btn" href="maa/">Learn More</a>
-            </div>
-            <div class="service-card">
-                <h2>Performance Pay Design</h2>
-                <p>
-                    Create a bonus structure that motivates the right behaviors
-                    and aligns payouts with results - paired with a calculation model
-                    built specifically for your organization.
-                    <br>
-                    <br>
-                    Includes: A custom interactive bonus tool for ongoing use.
-                    <br>
-                    Cost: $200 per hour
-                </p>
-                <a class="service-btn" href="ppd/">Learn More</a>
-            </div>
-            <div class="service-card">
-                <h2>Pay Progression Strategy</h2>
-                <p>
-                    Build a fair, defensible raise framework that rewards
-                    performance, supports retention, and keeps salaries
-                    aligned with the market. 
-                    <br>
-                    <br>
-                    Includes: A custom interactive Excel model your team
-                    can use for future raise cycles.
-                    <br>
-                    Cost: $175 per hour
-                </p>
-                <a class="service-btn" href="pps/">Learn More</a>
-            </div>
-            <div class="service-card">
-                <h2>Full Spectrum Compensation</h2>
-                <p>
-                    A complete compensation system combining Market Alignment,
-                    Pay Progression, and Performance Pay into one integrated 
-                    strategy.
-                    <br>
-                    <br>
-                    Includes: Your full custom compensation model built in
-                    an interactive Excel tool.
-                    <br>
-                    Cost: $325 per hour
-                </p>
-                <a class="service-btn" href="fsc/">Learn More</a>
-            </div>
-        </main>
-    </div>
-    <div id="footer"></div>
-    <script src="../includes.js"></script>
-</body>
- -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -101,15 +22,86 @@
         <div class="page-hero-img"></div>
     </section>
 
-    <section class="section">
-        <div class="container card-grid">
-            <a class="card" href="/services/maa/">Market Adjustment Analysis</a>
-            <a class="card" href="/services/ppd/">Pay Program Design</a>
-            <a class="card" href="/services/pps/">Pay Progression Strategy</a>
-            <a class="card" href="/services/fsc/">Financial Scenario Consulting</a>
+    <section class="services-container">
+        <div class="services-grid">
+            <a href="/services/maa/" class="service-card">
+                <i class="fa-solid fa-chart-line card-icon"></i>
+                <h3>Market Alignment Audit</h3>
+                <p>
+                    Analyze your current compensation practices against
+                    trusted market data to pinpoint gaps, equity issues,
+                    and opportunities to stay competitive.
+                    <br>
+                    <br>
+                    Deliverable: Clear findings and recommendations.
+                    <br>
+                    Cost: $150 per hour
+                </p>
+            </a>
+
+            <a href="/services/ppd/" class="service-card">
+                <i class="fa-solid fa-trophy card-icon"></i>
+                <h3>Performance Pay Design</h3>
+                <p>
+                    Create a bonus structure that motivates the right behaviors
+                    and aligns payouts with results - paired with a calculation model
+                    built specifically for your organization.
+                    <br>
+                    <br>
+                    Includes: A custom interactive bonus tool for ongoing use.
+                    <br>
+                    Cost: $200 per hour
+                </p>
+            </a>
+
+            <a href="/services/pps/" class="service-card">
+                <i class="fa-solid fa-stairs card-icon"></i>
+                <h3>Pay Progression Strategy</h3>
+                <p>
+                    Build a fair, defensible raise framework that rewards
+                    performance, supports retention, and keeps salaries
+                    aligned with the market. 
+                    <br>
+                    <br>
+                    Includes: A custom interactive Excel model your team
+                    can use for future raise cycles.
+                    <br>
+                    Cost: $175 per hour
+                </p>
+            </a>
+
+            <a href="/services/fsc/" class="service-card">
+                <i class="fa-solid fa-diagram-project card-icon"></i>
+                <h3>Full Spectrum Compensation</h3>
+                <p>
+                    A complete compensation system combining Market Alignment,
+                    Pay Progression, and Performance Pay into one integrated 
+                    strategy.
+                    <br>
+                    <br>
+                    Includes: Your full custom compensation model built in
+                    an interactive Excel tool.
+                    <br>
+                    Cost: $325 per hour
+                </p>
+            </a>
+
+            <!-- <a href="#" class="service-card partnership-card">
+                <div class="partnership-content">
+                    <div class="profile-section">
+                        <img src="https://via.placeholder.com/100" alt="Faamy Clain" class="profile-img">
+                        <h4>Partnership</h4>
+                        <span>Faamy Clain</span>
+                    </div>
+                    <div class="dev-section">
+                        <i class="fa-solid fa-code card-icon"></i>
+                        <h3>Web Development</h3>
+                        <p>Building modern, responsive websites and applications for a strong online presence.</p>
+                    </div>
+                </div>
+            </a> -->
         </div>
     </section>
-    
 
   </main>
 
