--- a/services/ppd/index.html
+++ b/services/ppd/index.html
@@ -84,7 +84,7 @@
 
     <section class="page-hero">
         <div class="page-hero-text">
-            <h1>Pay Program Design</h1>
+            <h1>Performance Pay Design</h1>
             <h3>Build bonus frameworks that scale</h3>
         </div>
         <div class="page-hero-img"></div>
