service pages started - how it works done

--- a/services/fsc/index.html
+++ b/services/fsc/index.html
@@ -73,7 +73,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Financial Scenario Consulting - Aline Analytics Services</title>
+  <title>Full Spectrum Compensation - Aline Analytics Services</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -84,20 +84,61 @@
 
     <section class="page-hero">
         <div class="page-hero-text">
-            <h1>Financial Scenario Consulting</h1>
+            <h1>Full Spectrum Compensation</h1>
             <h3>Model compensation costs before decisions are made</h3>
         </div>
         <div class="page-hero-img"></div>
     </section>
 
-    <section class="section">
-        <div class="container card-grid">
-            <h2>Financial Scenario Consulting</h2>
-            <p>...</p>
+    <section class="how-it-works">
+        <div class="hiw-container">
+            <h2 class="section-title">How It Works</h2>
+            
+            <div class="process-wrapper">
+                <div class="connector-line"></div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-magnifying-glass-chart"></i>
+                    </div>
+                    <h3>Market Benchmarking</h3>
+                    <p>
+                        Compare your organization's salaries to market
+                        benchmarks to ground the  compensation in real
+                        data
+                    </p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-sliders"></i>
+                    </div>
+                    <h3>Option Modeling</h3>
+                    <p>Explore multiple raise and bonus structure options</p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-compass"></i>
+                    </div>
+                    <h3>Strategy Alignment</h3>
+                    <p>Facilitate decision-making with your leadership team</p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-flag-checkered"></i>
+                    </div>
+                    <h3>Implementation & Results</h3>
+                    <p>
+                        Build the customized raise and bonus model and calculate
+                        employee-level raise and bonus outcomes
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     
-
   </main>
 
   <div id="footer"></div>
