--- a/services/maa/index.html
+++ b/services/maa/index.html
@@ -75,12 +75,55 @@
         <div class="page-hero-img"></div>
     </section>
 
-    <section class="section">
+    <section class="how-it-works">
+        <div class="hiw-container">
+            <h2 class="section-title">How It Works</h2>
+            
+            <div class="process-wrapper">
+                <div class="connector-line"></div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-file-lines"></i>
+                    </div>
+                    <h3>Role & Job Review</h3>
+                    <p>Review up to 25 job titles and job descriptions</p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-magnifying-glass-chart"></i>
+                    </div>
+                    <h3>Market Role Matching</h3>
+                    <p>Identify best-fit market matches using reputable
+                    salary data sources</p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-chart-column"></i>
+                    </div>
+                    <h3>Pay Benchmarking</h3>
+                    <p>Benchmark current base pay against market percentiles</p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-triangle-exclamation"></i>
+                    </div>
+                    <h3>Equity & Risk Insights</h3>
+                    <p>Highlight pay gaps, equity concerns, and compression risks</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <section class="section">
         <div class="container card-grid">
             <h2>Market Adjustment Analysis</h2>
             <p>...</p>
         </div>
-    </section>
+    </section> -->
     
 
   </main>
