--- a/services/ppd/index.html
+++ b/services/ppd/index.html
@@ -90,12 +90,61 @@
         <div class="page-hero-img"></div>
     </section>
 
-    <section class="section">
+    <section class="how-it-works">
+        <div class="hiw-container">
+            <h2 class="section-title">How It Works</h2>
+            
+            <div class="process-wrapper">
+                <div class="connector-line"></div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-chart-line"></i>
+                    </div>
+                    <h3>Market-Informed Baseline</h3>
+                    <p>
+                        Compare your organization's salaries to market
+                        benchmarks to ground the bonus design in real
+                        data
+                    </p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-sliders"></i>
+                    </div>
+                    <h3>Bonus Structure Modeling</h3>
+                    <p>Explore multiple bonus structure options</p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-compass"></i>
+                    </div>
+                    <h3>Leadership Alignment</h3>
+                    <p>Facilitate decision-making with your leadership team</p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-calculator"></i>
+                    </div>
+                    <h3>Bonus Modeling & Payouts</h3>
+                    <p>
+                        Build the customized bonus model and calculate
+                        employee-leve bonus outcomes
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <section class="section">
         <div class="container card-grid">
             <h2>Pay Program Design</h2>
             <p>...</p>
         </div>
-    </section>
+    </section> -->
     
 
   </main>
