--- a/services/pps/index.html
+++ b/services/pps/index.html
@@ -91,12 +91,61 @@
         <div class="page-hero-img"></div>
     </section>
 
-    <section class="section">
+    <section class="how-it-works">
+        <div class="hiw-container">
+            <h2 class="section-title">How It Works</h2>
+            
+            <div class="process-wrapper">
+                <div class="connector-line"></div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-chart-line"></i>
+                    </div>
+                    <h3>Market-Informed Baseline</h3>
+                    <p>
+                        Compare your organization's salaries to market
+                        benchmarks to ground the raise strategy in real
+                        data
+                    </p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-sliders"></i>
+                    </div>
+                    <h3>Raise Structure Modeling</h3>
+                    <p>Explore multiple raise structure options</p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-compass"></i>
+                    </div>
+                    <h3>Leadership Alignment</h3>
+                    <p>Facilitate decision-making with your leadership team</p>
+                </div>
+
+                <div class="process-step">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-calculator"></i>
+                    </div>
+                    <h3>Raise Modeling & Outcomes</h3>
+                    <p>
+                        Build the customized raise model and calculate
+                        employee-leve raise outcomes
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <section class="section">
         <div class="container card-grid">
             <h2>Pay Progression Strategy</h2>
             <p>...</p>
         </div>
-    </section>
+    </section> -->
     
 
   </main>
