logo updates to header

--- a/header.html
+++ b/header.html
@@ -1,8 +1,11 @@
 <!-- Header -->
 
 <header>
-    <div class="logo-img">
-        <img src="/images/Aline Logo Simple Rounded Corners.png" alt="Aline Analytics">
+    <div class="logo-container">
+      <a href="/" class="logo-link">
+        <img src="/images/image logo - green background.png" alt="Aline Analytics">
+        <h2>Aline Analytics</h2>
+      </a>
     </div>
     <nav>
       <a href="/index.html">Home</a>
