--- a/about/index.html
+++ b/about/index.html
@@ -1,46 +1,5 @@
-<!-- Bio of Me
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="../style.css">
-</head>
-<body>
-    <div id="header"></div>
-    <main class="container">
-        <h1>Allie Roth</h1>
-        <h2>Founder & Principal Analyst at Aline Analytics</h2>
-        <p>
-            I'm the founder and principal analyst at Aline
-            Analytics, turning complex data into clear,
-            actionable insights. With experience in compensation
-            analysis, advanced proficiency in Excel, SQL, and Python,
-            I help organizations make informed, strategic decisions.
-            My work is grounded in both precision and practicality,
-            ensuring every analysis drives meaningful impact.
-            <br>
-            <br>
-            I believe the best results come from collaboration - working
-            closely with teams and clients to understand their goals
-            and deliver insights that create real value. Whether it's
-            designing reports, modeling data, or tackling analytical
-            challenges, I bring curiosity, rigor, and a modern approach
-            to every project.
-        </p>
-        <p>
-            For consulting inquires or to schedule a conversation about
-            your organization's compensation needs, email me at
-            allieroth@alineanalytics.com. I personally review every
-            message.
-        </p>
-    </main>
-    <div id="footer"></div>
-    <script src="/includes.js"></script>
-</body> -->
-
+<!-- About Page -->
+ 
 <!DOCTYPE html>
 <html lang="en">
 <head>
