--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
   <div class="footer-columns">
     <div>
       <h4>Quick Links</h4>
-      <a href="/index.html">Home</a>
+      <a href="/">Home</a>
       <a href="/about/index.html">About</a>
       <a href="/services/index.html">Services</a>
       <a href="/faq/index.html">FAQs</a>
