--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
       </a>
     </div>
     <nav>
-      <a href="/index.html">Home</a>
+      <a href="/">Home</a>
       <a href="/about/">About</a>
       <div class="dropdown">
             <a class="dropdown-btn" href="/services/">Services</a>
