--- a/faq/index.html
+++ b/faq/index.html
@@ -29,7 +29,7 @@
             <span class="icon">+</span>
         </div>
         <div class="faq-content">
-            <p>I primarily work with small to mid-sized organizations that want compensation decisions grounded in market data, internal equity, and business strategy. This often includes companies preparing for growth, experiencing retention challenges, or formalizing pay practices for the first time.</p>
+            <p>We primarily work with small to mid-sized organizations (30-200 employees) that want compensation decisions grounded in market data, internal equity, and business strategy. This often includes companies preparing for growth, experiencing retention challenges, or formalizing pay practices for the first time.</p>
         </div>
     </div>
 
@@ -49,7 +49,7 @@
             <span class="icon">+</span>
         </div>
         <div class="faq-content">
-            <p>Salary surveys provide raw data. I focus on interpretation, alignment, and application. Each role is evaluated for job match quality, data reliability, internal equity, and organizational context before recommendations are made.</p>
+            <p>Salary surveys provide raw data. We focus on interpretation, alignment, and application. Each role is evaluated for job match quality, data reliability, internal equity, and organizational context before recommendations are made.</p>
         </div>
     </div>
 
@@ -111,7 +111,7 @@
             <span class="icon">+</span>
         </div>
         <div class="faq-content">
-            <p>Performance pay design aligns compensation with measurable outcomes, such as individual, team, or company performance. This may include bonuses, commissions, or incentive plans.</p>
+            <p>Performance pay design focuses on structuring bonus programs that tie compensation to measurable outcomes, such as individual, team, or company performance. This includes the design of bonus pools, payout curves, and incentive mechanics that drive the right behaviors.</p>
         </div>
     </div>
 
@@ -223,7 +223,7 @@
             <span class="icon">+</span>
         </div>
         <div class="faq-content">
-            <p>Yes. I provide manager-ready explanations, documentation, and guidance to support clear and consistent pay communication.</p>
+            <p>Yes. We provide manager-ready explanations, documentation, and guidance to support clear and consistent pay communication.</p>
         </div>
     </div>
 
@@ -234,7 +234,7 @@
             <span class="icon">+</span>
         </div>
         <div class="faq-content">
-            <p>While I do not provide legal advice, methodologies align with best practices for documentation, consistency, and defensibility. </p>
+            <p>While we do not provide legal advice, methodologies align with best practices for documentation, consistency, and defensibility. </p>
         </div>
     </div>
 
@@ -244,7 +244,7 @@
             <span class="icon">+</span>
         </div>
         <div class="faq-content">
-            <p>Typical inputs include job descriptions, current compensation data, organizational structure, and business objectives. I guide the data collection process to minimize internal burden.</p>
+            <p>Typical inputs include job descriptions, current compensation data, organizational structure, and business objectives. We guide the data collection process to minimize internal burden.</p>
         </div>
     </div>
 
@@ -277,7 +277,7 @@
         </div>
     </section>
 
-    <a href="mailto:allieroth@alineanalytics.com" class="get-in-touch-btn">Get in Touch</a> 
+    <a href="/contact/" class="get-in-touch-btn">Get in Touch</a> 
 
   </main>
 
