--- a/footer.html
+++ b/footer.html
@@ -5,9 +5,9 @@
     <div>
       <h4>Quick Links</h4>
       <a href="/">Home</a>
-      <a href="/about/index.html">About</a>
-      <a href="/services/index.html">Services</a>
-      <a href="/faq/index.html">FAQs</a>
+      <a href="/about/">About</a>
+      <a href="/services/">Services</a>
+      <a href="/faq/">FAQs</a>
     </div>
     <!-- <div>
       <h4>Resources</h4>
@@ -16,7 +16,7 @@
       <a href="#">Support</a>
     </div> -->
     <div>
-      <h4>Contact Us</h4>
+      <a href="/contact/"><h4>Contact Us</h4></a>
       <p>Allie Roth</p>
       <a href="mailto:allieroth@alineanalytics.com">allieroth@alineanalytics.com</a>
       <div class="social-icons">
