--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="hero-text">
             <h1>Welcome to Aline Analytics</h1>
             <h3>Compensation shouldn’t be a guessing game.</h3>
-            <p>Aline Analytics helps growing companies align pay, bonuses, and raises to the market — so you’re not overpaying, underpaying, or losing great people without realizing why.</p>
+            <p>Aline Analytics helps growing companies align employee compensation to the market so leaders can make confident, defensible pay decisions and clearly explain them to employees — especially during hiring, raises, and bonus cycles.</p>
             <div class="hero-btn">
                 <a href="/about/" class="btn btn-learn">Learn More</a>
             </div>
@@ -62,7 +62,7 @@
         <div class="info1">
             <i class="fa-solid fa-handshake"></i>
             <h4>Who we work with</h4>
-            <p>We partner with small to mid-sized companies (typically 50–200 employees) that are growing, hiring, or navigating change — and want confidence their compensation decisions are sound.</p>
+            <p>We partner with small to mid-sized companies (typically 30–200 employees) that are growing, hiring, or navigating change — and want confidence their compensation decisions are sound.</p>
         </div>
         <div class="info2">
             <i class="fa-solid fa-clipboard-check"></i>
