--- a/services/maa/index.html
+++ b/services/maa/index.html
@@ -35,7 +35,7 @@
                         <i class="fa-solid fa-file-lines"></i>
                     </div>
                     <h3>Role & Job Review</h3>
-                    <p>Review up to 25 job titles and job descriptions</p>
+                    <p>Review job titles and job descriptions</p>
                 </div>
 
                 <div class="process-step">
