--- a/services/ppd/index.html
+++ b/services/ppd/index.html
@@ -65,7 +65,7 @@
                     <h3>Bonus Modeling & Payouts</h3>
                     <p>
                         Build the customized bonus model and calculate
-                        employee-leve bonus outcomes
+                        employee-level bonus outcomes
                     </p>
                 </div>
             </div>
