--- a/services/pps/index.html
+++ b/services/pps/index.html
@@ -65,7 +65,7 @@
                     <h3>Raise Modeling & Outcomes</h3>
                     <p>
                         Build the customized raise model and calculate
-                        employee-leve raise outcomes
+                        employee-level raise outcomes
                     </p>
                 </div>
             </div>
