--- a/header.html
+++ b/header.html
@@ -7,6 +7,12 @@
         <h2>Aline Analytics</h2>
       </a>
     </div>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle" class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
     <nav>
       <a href="/">Home</a>
       <a href="/about/">About</a>
